tests/ui/fallback/non-unit-variant-which-is-not-fallback.stderr
error: FromBits only supports unit variants for variants without `#[fallback]`
 --> tests/ui/fallback/non-unit-variant-which-is-not-fallback.rs:6:5
  |
6 |     So(u3),
  |     ^^^^^^
  |
  = help: change this variant to a unit
